<resources>
    <string name="app_name">Petgram</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome_do_petuser">Nome do PetUser</string>
    <string name="idade_do_pet">Idade do Pet</string>
    <string name="email_do_a_pai_m_e_do_pet">Email do(a) PAI/MÃE do Pet</string>
    <string name="estilo_de_vida_pet">Estilo de vida Pet</string>
    <string name="sexo_do_pet">Sexo do pet</string>
    <string name="senha_pet">Senha Pet</string>
    <string name="confirma_o_de_senha_pet">Confirmação de Senha Pet</string>
    <string name="email">Email</string>
    <string name="entrar">Entrar</string>
    <string name="digite_sua_senha">Digite sua Pet senha!</string>
    <string name="recuperar_minha_petsenha">Recuperar minha PetSenha</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="selecionar_sexo_do_seu_pet_opcional">Selecionar sexo do seu Pet! (OPCIONAL)</string>
    <string name="pethome">PetHome</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="petperfil">PetPerfil</string>
    <string name="petpostagem">PetPostagem</string>
    <string name="petusuarios">PetUsuarios</string>
    <string name="deseja_sair_app">Deseja sair do app?</string>
    <string name="deseja_sair_app_message">Deseja mesmo, mesmo, meeeesmo sair do app?\nAinda existem várias fotos de pets para você se deliciar!</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="sair">Sair</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifica_o">Notificação</string>
    <string name="notificacaomensagem">Você tem uma nova mensagem!</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="todos_usu_rios">Todos Usuários</string>
    <string name="pesquisar_usu_rios">Pesquisar Usuários</string>
    <string name="seguir">Seguir</string>
    <string name="seguindo">Seguindo</string>
    <string name="descri_o">Descrição</string>
    <string name="filtros">Filtros</string>
    <string name="comentario">Comentario</string>
    <string name="ver_todos_os_10_comentarios">Ver todos os 10 comentarios</string>
    <string name="_1_like">1 like</string>
    <string name="digite_um_comentario">Digite um comentario</string>
    <string name="postar">Postar</string>
    <string name="nome_usuario_digitado">Nome usuario digitado</string>
    <string name="likes">Likes</string>
    <string name="seguidores">Seguidores</string>
    <string name="foto">Foto</string>
    <string name="editar_petperfil">Editar PetPerfil</string>
    <string name="salvar">Salvar</string>
    <string name="alterar_foto">Alterar foto</string>
    <string name="outro">Outro</string>
    <string name="notifica_es">Notificações</string>
    <string name="postagens">Postagens</string>
    <string name="congifura_es">Configurações</string>
    <string name="opcoes">Opções</string>
    <string name="usu_rio">Usuário</string>
    <string name="nome_papai_mam_e_do_pet">Nome Papai/Mamãe do Pet</string>
    <string name="publicar">Publicar</string>
    <string name="c_mera">Câmera</string>
    <string name="galeria">Galeria</string>
    <string name="adicionar_um_nova_petfoto">Adicionar um nova PetFoto</string>
    <string name="encontre_um_petlover">Encontre um PetLover</string>
    <string name="encotre_mais_amantes_de_pets_acredite_somos_um_numero_enorme_de_pessoas_que_amam_os_grand_es_e_dos_baixinhos">Encontre mais amantes de Pets. Acredite, somos um numero enorme de pessoas que amam os grandões e dos baixinhos.</string>
    <string name="description">Description</string>
    <string name="crie_sua_conta_gr_tis">Crie sua conta grátis!</string>
    <string name="caso_nao_possua">Caso não possua uma PetConta, clique no botão para se cadastrar. Caso ja possua uma conta, clique em Entrar.</string>
    <string name="poste_fotos">Poste fotos!</string>
    <string name="poste_fotos_de_todos_os_seu_pets_e_acompanhe_em_tempo_real_os_amigos_de_seus_pets">Poste fotos de todos os seu pets e acompanhe em tempo real os amigos de seus pets!</string>
    <string name="exiba_essas_fofuras_para_o_mundo">Exiba essas fofuras para o mundo.</string>
    <string name="poste_fotos_de_todos_os_seus">Poste fotos de todos os seu pets e acompanhe em tempo real os amigos de seus pets!</string>
    <string name="fechar">Fechar</string>
    <string name="enviar">Enviar</string>
    <string name="petmensagem">PetMensagem</string>
    <string name="conversas">Conversas</string>
    <string name="contatos">Contatos</string>
    <string name="chat_jam">Chat Jam</string>
    <string name="title_activity_talks_jam">TalksJamActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="atualizar">Atualizar</string>
    <string name="title_activity_grupo_contatos_jam">GrupoContatosJam</string>
    <string name="title_activity_cadastro_grupo_conversas_jam">CadastroGrupoConversasJam</string>
    <string name="nome_do_grupo">Nome do Grupo</string>
    <string name="escolha_um_nome_deveras_criativo_para_seu_grupo_e_uma_imagem_opcional">Escolha um nome deveras criativo para seu grupo e uma imagem opcional.</string>
    <string name="participantes">Participantes</string>
    <string name="pesquisar_conversas_ou_contatos">Pesquisar conversas ou contatos</string>
    <string name="developed_by_franklin_juniorraveline">Developed by Franklin | @JuniorRaveline</string>
    <string name="selecione_um_arquivo">Selecione um arquivo</string>
    <string name="nenhum_arquivo_selecionado">Nenhum arquivo selecionado</string>
    <string name="upload">Upload</string>
    <string name="video">Video</string>


</resources>
