<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


   <item
        android:id="@+id/chat_MenuSair"
        android:icon="@drawable/ic_nearme_branco"
        android:title="@string/conversas"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/atualizar_update_MenuSair"
        android:icon="@drawable/ic_update_atualizar_branco"
        android:title="@string/atualizar"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/video_upload_MenuSair"
        android:icon="@drawable/ic_baseline_videocam_24"
        android:title="@string/video"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/item_sair_MenuSair"
        android:title="@string/sair"
        />
</menu>