<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_launcher_2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/description"
        android:padding="5dp"
        android:src="@drawable/petslauncherdois"
         />

    <TextView
        android:id="@+id/textoTitulo_launcher_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:padding="5dp"
        android:text="@string/encontre_um_petlover"
        android:textAlignment="center"
        android:textColor="@color/Azulnovo"
        android:textIsSelectable="true"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textDescricao_launcher_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:padding="5dp"
        android:text="@string/encotre_mais_amantes_de_pets_acredite_somos_um_numero_enorme_de_pessoas_que_amam_os_grand_es_e_dos_baixinhos"
        android:textAlignment="center"
        android:textColor="@color/Azulnovo"
        android:textIsSelectable="true"
        android:textSize="20sp" />

</LinearLayout>