<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_principal"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout_geral_Login_act"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:textColorHint="@color/branco"
            app:placeholderText="seuEmail@provedor.com.br"
            app:startIconDrawable="@drawable/ic_email_alterar"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailPet_Login_act"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:singleLine="true"
                android:textColor="@color/branco" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:textColorHint="@color/branco"
            app:passwordToggleEnabled="true"
            app:placeholderText="minhasenha123">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/senhaPet_Login_act"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha_pet"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:singleLine="true"
                android:textColor="@color/branco" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar_Login_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="5dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/botaoLogarPet_LoginAct"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/botao_login_shape_bg"
            android:text="@string/entrar"
            android:textColor="@color/branco"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/recuperarSenha_Cadastro_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_pets_white_24dp"
            android:padding="8dp"
            android:text="@string/recuperar_minha_petsenha"
            android:textAlignment="center"
            android:textColor="@color/branco"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>