<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_principal"
    tools:context=".activities.PerfilActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:id="@+id/actionBar_PerfilUsuario_Activity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_PerfilUsuario_Activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            >

            <RelativeLayout
                android:id="@+id/relativeLayout_PerfilActivityToolbar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/fechar_PerfilActivity_id"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_fechar_escuro"

                    />

                <TextView
                    android:id="@+id/nomeUsuario_PerfilActivity_id"
                    android:text="@string/editar_petperfil"
                    android:layout_toEndOf="@id/fechar_PerfilActivity_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:textColor="#43464A"
                    />

                <Button
                    android:id="@+id/salvar_PerfilActivity_id"
                    android:text="Salvar"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp"
                    android:drawableEnd="@drawable/ic_done_validar"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="#43464A"
                    />






            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagem_fotoPerfil_Activity"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:layout_margin="10dp"
            android:src="@drawable/logodogs"
            />

        <TextView
            android:id="@+id/alterarFoto_UsuarioPerfil_Activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alterar_foto"
            android:textColor="@color/cinzaClaro"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/nomePet_Perfil_Activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_textColorHint="@color/branco"
            android:hint="@string/nome_do_petuser"
            android:singleLine="true"
            android:layout_marginTop="20dp"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/cinzaEscuro"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/nomeDonoPet_Perfil_Activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_papai_mam_e_do_pet"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            app:met_textColorHint="@color/branco"
            android:singleLine="true"
            app:met_floatingLabelTextColor="@color/branco"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/descricaoPet_Perfil_Activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_textColorHint="@color/branco"
            android:hint="@string/descri_o"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/branco"
            />


    </LinearLayout>

</LinearLayout>